条件指定の検索機能の実装、コース情報と紐づく受講状況ステータスの追加、それらに関するテスト